--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,8 @@ header {
   justify-content: space-between;
   background-color: $light-blue;
   padding: 0.5rem 2rem;
+  position: fixed;
+  width: 100%;
 
   .hamburger {
     display: none;
@@ -67,7 +69,7 @@ header {
         transition: 0.5s transform ease;
 
         &:hover {
-          transform: scale(1.5);
+          transform: scale(1.2);
         }
 
         &::before {
@@ -93,7 +95,7 @@ header {
 
 // Showcase
 .showcase {
-  padding: 3rem 0;
+  padding: 9em 0 3rem 0;
   width: 80%;
   margin: auto;
   height: 100%;
@@ -157,12 +159,12 @@ header {
       position: fixed;
       top: 0;
       right: 0;
-      width: 40%;
-      height: 100%;
+      width: 30%;
+      height: 80%;
 
       ul {
         width: 100%;
-        height: 100vh;
+        height: 100%;
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
@@ -215,6 +217,7 @@ header {
       &-text {
         text-align: center;
         flex: 0 1 auto;
+        padding-top: 2rem;
 
         .italic {
           text-align: center;
