--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,322 @@
-*{-webkit-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0}body{font-family:"Roboto", sans-serif}ul{list-style:none}a{text-decoration:none;color:black}img{width:100%}header{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;background-color:#cdf8f8;padding:0.5rem 2rem;position:fixed;width:100%}header .hamburger{display:none}header .logo{font-family:"Satisfy", cursive;font-size:3rem}header .logo a{color:#d38888}header .nav ul{display:-webkit-box;display:-ms-flexbox;display:flex}header .nav ul li{padding:2rem 1rem}header .nav ul a{padding:0.3rem 0;text-transform:uppercase;color:#d38888;font-weight:500;letter-spacing:0.15rem;position:relative;-webkit-transition:0.5s -webkit-transform ease;transition:0.5s -webkit-transform ease;transition:0.5s transform ease;transition:0.5s transform ease, 0.5s -webkit-transform ease}header .nav ul a:hover{-webkit-transform:scale(1.2);transform:scale(1.2)}header .nav ul a::before{content:"";position:absolute;bottom:0;left:0;width:100%;height:2px;background:#d38888;-webkit-transform:scaleX(0);transform:scaleX(0);-webkit-transform-origin:left;transform-origin:left;-webkit-transition:-webkit-transform 0.5s ease;transition:-webkit-transform 0.5s ease;transition:transform 0.5s ease;transition:transform 0.5s ease, -webkit-transform 0.5s ease}header .nav ul a:hover::before{-webkit-transform:scaleX(1);transform:scaleX(1)}.showcase{padding:9em 0 3rem 0;width:80%;margin:auto;height:100%}.showcase .showcase-inner{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.showcase .showcase-inner>div{margin:0 1rem}.showcase .showcase-inner-image{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-flex:0;-ms-flex:0 1 50vw;flex:0 1 50vw;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.showcase .showcase-inner-image img{border-radius:2rem}.showcase .showcase-inner-text{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-flex:0;-ms-flex:0 1 50vw;flex:0 1 50vw;line-height:1.5;letter-spacing:0.05rem}.showcase .showcase-inner-text p{margin:0.4rem 0}.showcase .showcase-inner-text .italic{font-style:italic;text-align:right;font-weight:500}@media (max-width: 850px){header .hamburger{display:block;font-size:1.7rem;color:#d38888;cursor:pointer;z-index:1}header .hamburger .fa-times{display:none}header .nav{position:fixed;top:0;right:0;width:30%;height:80%}header .nav ul{width:100%;height:100%;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:space-evenly;-ms-flex-pack:space-evenly;justify-content:space-evenly;text-align:center}header .nav ul li{width:100%;height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-transform:translateX(100%);transform:translateX(100%);-webkit-transition:-webkit-transform 0.4s ease;transition:-webkit-transform 0.4s ease;transition:transform 0.4s ease;transition:transform 0.4s ease, -webkit-transform 0.4s ease}header .nav ul li:nth-child(4){background:#feffcc;-webkit-transition-delay:0.4s;transition-delay:0.4s}header .nav ul li:nth-child(3){background:#dfdaff;-webkit-transition-delay:0.3s;transition-delay:0.3s}header .nav ul li:nth-child(2){background:#d9fff2;-webkit-transition-delay:0.2s;transition-delay:0.2s}header .nav ul li:nth-child(1){background:#c4eeff;-webkit-transition-delay:0.1s;transition-delay:0.1s}header.open .nav ul li{-webkit-transform:translateX(0);transform:translateX(0)}.showcase{width:90%}}@media (max-width: 600px){.showcase .showcase-inner{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.showcase .showcase-inner-text{text-align:center;-webkit-box-flex:0;-ms-flex:0 1 auto;flex:0 1 auto;padding-top:2rem}.showcase .showcase-inner-text .italic{text-align:center}.showcase .showcase-inner-image{-webkit-box-flex:0;-ms-flex:0 1 auto;flex:0 1 auto}}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+img {
+  width: 100%;
+}
+
+/* BACK TO TOP BUTTON */
+#myBtn {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Fixed/sticky position */
+  bottom: 20px;
+  /* Place the button at the bottom of the page */
+  right: 30px;
+  /* Place the button 30px from the right */
+  z-index: 100;
+  /* Make sure it does not overlap */
+  border: none;
+  /* Remove borders */
+  outline: none;
+  /* Remove outline */
+  background-color: transparent;
+  /* Set a background color*/
+  color: #d38888;
+  /* Text color */
+  cursor: pointer;
+  /* Add a mouse pointer on hover */
+  padding: 5px;
+  /* Some padding */
+  border-radius: 15px;
+  /* Rounded corners */
+  font-size: 18px;
+  /* Increase font size */
+}
+
+#myBtn:hover {
+  color: #777;
+  transition: all 500ms ease;
+}
+
+/* END BACK TO TOP BUTTON */
+header {
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #cdf8f8;
+  padding: 0.5rem 2rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+
+header .hamburger {
+  display: none;
+}
+
+header .logo {
+  font-family: "Satisfy", cursive;
+  font-size: 3rem;
+}
+
+header .logo a {
+  color: #d38888;
+}
+
+header .nav ul {
+  display: flex;
+}
+
+header .nav ul li {
+  padding: 2rem 1rem;
+}
+
+header .nav ul a {
+  padding: 0.3rem 0;
+  text-transform: uppercase;
+  color: #d38888;
+  font-weight: 500;
+  letter-spacing: 0.15rem;
+  position: relative;
+  transition: 0.5s transform ease;
+}
+
+header .nav ul a:hover {
+  transform: scale(1.2);
+}
+
+header .nav ul a::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #d38888;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s ease;
+}
+
+header .nav ul a:hover::before {
+  transform: scaleX(1);
+}
+
+.showcase {
+  padding: 9em 0 3rem 0;
+  width: 80%;
+  margin: auto;
+  height: 100%;
+}
+
+.showcase .showcase-inner {
+  display: flex;
+  justify-content: center;
+}
+
+.showcase .showcase-inner > div {
+  margin: 0 1rem;
+}
+
+.showcase .showcase-inner-image {
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 50vw;
+  align-items: center;
+}
+
+.showcase .showcase-inner-image img {
+  border-radius: 2rem;
+}
+
+.showcase .showcase-inner-text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex: 0 1 50vw;
+  line-height: 1.5;
+  letter-spacing: 0.05rem;
+}
+
+.showcase .showcase-inner-text p {
+  margin: 0.4rem 0;
+}
+
+.showcase .showcase-inner-text .italic {
+  font-style: italic;
+  text-align: right;
+  font-weight: 500;
+}
+
+.test-content {
+  padding-top: 10rem;
+}
+
+.test-content ol {
+  list-style-type: lower-alpha;
+}
+
+.test-content .test-title {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: #a768fa;
+}
+
+.test-content .test-title h1 {
+  font-size: 3rem;
+}
+
+.test-content .test-title h2 {
+  font-style: italic;
+  font-weight: normal;
+}
+
+.test-content .box {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  padding: 0 3rem;
+  line-height: 2;
+}
+
+.test-content .box > div {
+  margin: 1rem;
+  padding: 1rem 2rem;
+  border-radius: 1.5rem;
+}
+
+.test-content .box > div h3 {
+  padding: 1rem 0;
+}
+
+.test-content .box > div ol {
+  padding: 0 1rem;
+}
+
+.test-content .box1 .question-wrapper {
+  background: #feffd5;
+  border: 4px dotted #e9ef00;
+}
+
+.test-content .box2 .question-wrapper {
+  background: #c4eeff;
+  border: 4px dotted #009ede;
+}
+
+.test-content .box3 .question-wrapper {
+  background: #dfdaff;
+  border: 4px dotted #2100f4;
+}
+
+.test-content .box4 .question-wrapper {
+  background: #d9fff2;
+  border: 4px dotted #00f3a0;
+}
+
+.test-content .box5 .question-wrapper {
+  background: #feffd5;
+  border: 4px dotted #e9ef00;
+}
+
+@media (max-width: 850px) {
+  header .logo {
+    z-index: 1;
+  }
+  header .hamburger {
+    display: block;
+    font-size: 1.7rem;
+    color: #d38888;
+    cursor: pointer;
+    z-index: 1;
+  }
+  header .hamburger .fa-times {
+    display: none;
+  }
+  header .nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 80%;
+  }
+  header .nav ul {
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+  }
+  header .nav ul li {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform 0.4s ease;
+  }
+  header .nav ul li:nth-child(4) {
+    background: #feffd5;
+    transition-delay: 0.4s;
+  }
+  header .nav ul li:nth-child(3) {
+    background: #dfdaff;
+    transition-delay: 0.3s;
+  }
+  header .nav ul li:nth-child(2) {
+    background: #d9fff2;
+    transition-delay: 0.2s;
+  }
+  header .nav ul li:nth-child(1) {
+    background: #c4eeff;
+    transition-delay: 0.1s;
+  }
+  header.open .nav ul li {
+    transform: translateX(0);
+  }
+  .showcase {
+    width: 90%;
+  }
+}
+
+@media (max-width: 600px) {
+  .showcase .showcase-inner {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .showcase .showcase-inner-text {
+    text-align: center;
+    flex: 0 1 auto;
+    padding-top: 2rem;
+  }
+  .showcase .showcase-inner-text .italic {
+    text-align: center;
+  }
+  .showcase .showcase-inner-image {
+    flex: 0 1 auto;
+  }
+  .test-content .box {
+    display: block;
+  }
+}
