--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -53,15 +54,22 @@ img {
 
 #myBtn:hover {
   color: #777;
+  -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
 }
 
 /* END BACK TO TOP BUTTON */
 header {
   top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: #cdf8f8;
   padding: 0.5rem 2rem;
   position: fixed;
@@ -83,6 +91,8 @@ header .logo a {
 }
 
 header .nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -97,11 +107,15 @@ header .nav ul a {
   font-weight: 500;
   letter-spacing: 0.15rem;
   position: relative;
+  -webkit-transition: 0.5s -webkit-transform ease;
+  transition: 0.5s -webkit-transform ease;
   transition: 0.5s transform ease;
+  transition: 0.5s transform ease, 0.5s -webkit-transform ease;
 }
 
 header .nav ul a:hover {
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 header .nav ul a::before {
@@ -112,13 +126,19 @@ header .nav ul a::before {
   width: 100%;
   height: 2px;
   background: #d38888;
-  transform: scaleX(0);
-  transform-origin: left;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
 }
 
 header .nav ul a:hover::before {
-  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
 }
 
 .showcase {
@@ -129,8 +149,12 @@ header .nav ul a:hover::before {
 }
 
 .showcase .showcase-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .showcase .showcase-inner > div {
@@ -138,10 +162,19 @@ header .nav ul a:hover::before {
 }
 
 .showcase .showcase-inner-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  flex: 0 1 50vw;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50vw;
+          flex: 0 1 50vw;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .showcase .showcase-inner-image img {
@@ -149,10 +182,19 @@ header .nav ul a:hover::before {
 }
 
 .showcase .showcase-inner-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  flex: 0 1 50vw;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50vw;
+          flex: 0 1 50vw;
   line-height: 1.5;
   letter-spacing: 0.05rem;
 }
@@ -193,8 +235,8 @@ header .nav ul a:hover::before {
 .test-content .box {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: repeat(2, 1fr);
-  grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
   padding: 0 3rem;
   line-height: 2;
 }
@@ -256,44 +298,69 @@ header .nav ul a:hover::before {
     position: fixed;
     top: 0;
     right: 0;
-    width: 50%;
-    height: 80%;
+    width: 100%;
+    height: 90%;
+    z-index: 1;
   }
   header .nav ul {
     width: 100%;
     height: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     text-align: center;
   }
   header .nav ul li {
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    transform: translateX(100%);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 0.4s ease;
+    transition: -webkit-transform 0.4s ease;
     transition: transform 0.4s ease;
+    transition: transform 0.4s ease, -webkit-transform 0.4s ease;
+    border: #d38888 solid 1px;
   }
   header .nav ul li:nth-child(4) {
     background: #feffd5;
-    transition-delay: 0.4s;
+    -webkit-transition-delay: 0.4s;
+            transition-delay: 0.4s;
+    border-bottom-width: 2px;
   }
   header .nav ul li:nth-child(3) {
     background: #dfdaff;
-    transition-delay: 0.3s;
+    -webkit-transition-delay: 0.3s;
+            transition-delay: 0.3s;
   }
   header .nav ul li:nth-child(2) {
     background: #d9fff2;
-    transition-delay: 0.2s;
+    -webkit-transition-delay: 0.2s;
+            transition-delay: 0.2s;
   }
   header .nav ul li:nth-child(1) {
     background: #c4eeff;
-    transition-delay: 0.1s;
+    -webkit-transition-delay: 0.1s;
+            transition-delay: 0.1s;
   }
   header.open .nav ul li {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
   .showcase {
     width: 90%;
@@ -301,22 +368,35 @@ header .nav ul a:hover::before {
 }
 
 @media (max-width: 600px) {
+  header .logo {
+    font-size: 1.5rem;
+  }
   .showcase .showcase-inner {
-    flex-direction: column;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .showcase .showcase-inner-text {
     text-align: center;
-    flex: 0 1 auto;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
     padding-top: 2rem;
   }
   .showcase .showcase-inner-text .italic {
     text-align: center;
   }
   .showcase .showcase-inner-image {
-    flex: 0 1 auto;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
   }
   .test-content .box {
     display: block;
+    padding: 0 1rem;
   }
 }
