--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  padding-bottom: 2rem;
 }
 
 ul {
@@ -369,7 +370,7 @@ header .nav ul a:hover::before {
 
 @media (max-width: 600px) {
   header .logo {
-    font-size: 1.5rem;
+    font-size: 2.2rem;
   }
   .showcase .showcase-inner {
     -webkit-box-orient: vertical;
