--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@ $dark-purle: #a768fa;
 
 body {
   font-family: "Roboto", sans-serif;
+  padding-bottom: 2rem;
 }
 
 // Global
@@ -308,7 +309,7 @@ header {
 @media (max-width: 600px) {
   header {
     .logo {
-      font-size: 1.5rem;
+      font-size: 2.2rem;
     }
   }
 
