--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  padding-bottom: 2rem;
+  padding-bottom: 5rem;
 }
 
 ul {
@@ -208,6 +208,42 @@ header .nav ul a:hover::before {
   font-style: italic;
   text-align: right;
   font-weight: 500;
+}
+
+.video-main {
+  width: 100%;
+  padding-top: 10em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.video-main .hero {
+  font-size: 2rem;
+  font-family: "Satisfy", cursive;
+  margin: 2rem 0;
+  color: #a768fa;
+}
+
+.video-main .video-box {
+  width: 100%;
+  margin: auto;
+}
+
+.video-main .video-box h1 {
+  margin: 1rem 0;
+  color: #d38888;
 }
 
 .test-content {
