--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,10 +59,10 @@ header {
   align-items: center;
   justify-content: space-between;
   background-color: $light-blue;
-  padding: 0.5rem 2rem;
+  padding: 0rem 2rem;
   position: fixed;
   width: 100%;
-  z-index: 1000;
+  z-index: 5;
 
   .hamburger {
     display: none;
@@ -70,7 +70,7 @@ header {
 
   .logo {
     font-family: "Satisfy", cursive;
-    font-size: 3rem;
+    font-size: 2.5rem;
     // z-index: 1;
 
     a {
@@ -184,8 +184,6 @@ header {
   }
 
   .video-wrapper {
-    width: 100%;
-
     h2 {
       color: $pink-color;
       font-size: 2rem;
@@ -198,7 +196,7 @@ header {
 .test-content {
   padding-top: 8rem;
   font-family: "Roboto", sans-serif;
-  letter-spacing: 1.5;
+  letter-spacing: 0.03rem;
 
   ol {
     list-style-type: lower-alpha;
@@ -224,7 +222,7 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 3rem;
-    line-height: 2;
+    line-height: 1.7;
 
     & > div {
       margin: 1rem;
