--- a/scss/style.scss
+++ b/scss/style.scss
@@ -59,7 +59,7 @@ header {
   align-items: center;
   justify-content: space-between;
   background-color: $light-blue;
-  padding: 0rem 2rem;
+  padding: 0.3rem 2rem;
   position: fixed;
   width: 100%;
   z-index: 5;
@@ -278,16 +278,19 @@ header {
     }
 
     .nav {
-      position: fixed;
-      top: 0;
-      right: 0;
-      width: 100%;
-      height: 90%;
-      z-index: 1;
+      // position: fixed;
+      // top: 0;
+      // right: 0;
+      // width: 100%;
+      // height: 90%;
+      // z-index: 1;
 
       ul {
+        position: fixed;
+        top: 0;
+        right: 0;
         width: 100%;
-        height: 100%;
+        height: 90%;
         flex-direction: column;
         align-items: center;
         justify-content: space-evenly;
