--- a/scss/style.scss
+++ b/scss/style.scss
@@ -284,6 +284,7 @@ header {
       // width: 100%;
       // height: 90%;
       // z-index: 1;
+      // position: relative;
 
       ul {
         position: fixed;
