--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ img {
   width: 100%;
 }
 
+.text-md {
+  font-size: 1.5rem;
+}
+
 /* BACK TO TOP BUTTON */
 #myBtn {
   display: none;
@@ -322,24 +326,40 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 2rem;
-  background-color: #ffe3f6;
+  background: #e5daff;
+  text-align: center;
+  border-radius: 2rem;
   width: 85%;
   margin: 2rem auto;
-  border-radius: 2rem;
+  padding: 2rem;
 }
 
-.test-content .box6 .decor img {
-  width: 70%;
+.test-content .box6 h2 {
+  padding: 2rem 0;
 }
 
-.test-content .box6 .question-wrapper {
+.test-content .box6 > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.test-content .box6 h3 span {
+  color: #ff7e28;
+  padding: 0 1rem;
+}
+
+.test-content .question-wrapper {
   margin: 2rem 0;
   padding: 1rem 1rem;
 }
@@ -473,6 +493,21 @@ header {
     width: 400px;
     height: 220px;
     z-index: 10;
+  }
+  .box6 > div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .box6 img {
+    width: 50%;
   }
 }
 
