--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,10 @@ a {
 img {
   width: 100%;
 }
+
+.text-md {
+  font-size: 1.5rem;
+}
 /* BACK TO TOP BUTTON */
 #myBtn {
   display: none; /* Hidden by default */
@@ -264,23 +268,33 @@ header {
 
   .box6 {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
-    background-color: #ffe3f6;
+    background: #e5daff;
+    text-align: center;
+    border-radius: 2rem;
     width: 85%;
     margin: 2rem auto;
-    border-radius: 2rem;
-    .decor {
-      img {
-        width: 70%;
-      }
+    padding: 2rem;
+    h2 {
+      padding: 2rem 0;
+    }
+    & > div {
+      display: flex;
     }
 
-    .question-wrapper {
-      margin: 2rem 0;
-      padding: 1rem 1rem;
+    h3 {
+      span {
+        color: #ff7e28;
+        padding: 0 1rem;
+      }
     }
+  }
+
+  .question-wrapper {
+    margin: 2rem 0;
+    padding: 1rem 1rem;
   }
 }
 
@@ -415,6 +429,18 @@ header {
     width: 400px;
     height: 220px;
     z-index: 10;
+  }
+
+  .box6 {
+    & > div {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    img {
+      width: 50%;
+    }
   }
 }
 
