--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,6 +32,10 @@ img {
   width: 100%;
 }
 
+.buffer {
+  height: 150px;
+}
+
 .text-md {
   font-size: 1.5rem;
 }
@@ -65,7 +69,7 @@ header {
   justify-content: space-between;
   background-color: $light-blue;
   padding: 1rem 2rem;
-  // position: fixed;
+  position: fixed;
   width: 100%;
   z-index: 5;
 }
@@ -300,9 +304,12 @@ header {
 
 // Media Queries
 @media (max-width: 850px) {
+  .buffer {
+    height: 100px;
+  }
   header {
     .logo {
-      z-index: 2;
+      // z-index: 1;
       transition: all 0.5s ease;
     }
     .hamburger {
@@ -310,7 +317,7 @@ header {
       font-size: 1.7rem;
       color: $pink-color;
       cursor: pointer;
-      z-index: 1;
+      // z-index: 1;
 
       .fa-times {
         display: none;
@@ -323,11 +330,11 @@ header {
       // right: 0;
       // width: 100%;
       // height: 90%;
-      // z-index: 1;
+      // z-index: 0;
       // position: relative;
 
       ul {
-        position: absolute;
+        position: fixed;
         top: 0;
         right: 0;
         width: 100%;
@@ -336,6 +343,8 @@ header {
         align-items: center;
         justify-content: space-evenly;
         text-align: center;
+        z-index: -1;
+        transform: translateX(100%);
 
         li {
           width: 100%;
@@ -343,9 +352,14 @@ header {
           display: flex;
           justify-content: center;
           align-items: center;
+          // position: relative;
+          // top: 0;
+          // right: -1000px;
           transform: translateX(100%);
-          transition: transform 0.4s ease;
+          transition: all 0.4s ease;
           border: $pink-color solid 1px;
+          // display: none;
+          padding: 0;
 
           &:nth-child(4) {
             background: $yellow-color;
@@ -367,8 +381,13 @@ header {
         }
       }
     }
+
+    &.open .nav ul {
+      transform: translateX(0);
+    }
     &.open .nav ul li {
       transform: translateX(0);
+      // right: 0;
     }
 
     &.open .logo {
@@ -428,7 +447,6 @@ header {
   iframe {
     width: 400px;
     height: 220px;
-    z-index: 10;
   }
 
   .box6 {
@@ -447,6 +465,6 @@ header {
 @media (max-width: 500px) {
   iframe {
     width: 300px;
-    height: 165px;
+    height: 185px;
   }
 }
