--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,10 +1,4 @@
-$light-blue: #cdf8f8;
-$pink-color: #d38888;
-$yellow-color: #feffd5;
-$purple-color: #dfdaff;
-$light-green: #d9fff2;
-$pastel-blue: #c4eeff;
-$dark-purle: #a768fa;
+@import "config";
 
 * {
   box-sizing: border-box;
