--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import "mobile";
 
 * {
   box-sizing: border-box;
@@ -169,6 +170,7 @@ header {
   }
 }
 // Videos Page
+
 .video-main {
   width: 100%;
   padding-top: 3em;
@@ -181,8 +183,25 @@ header {
   .hero {
     font-size: 2rem;
     font-family: "Mali", cursive;
-    margin: 2rem 0;
+    margin-bottom: 2rem;
     color: $dark-purle;
+    width: 100%;
+    height: 400px;
+    min-height: 300px;
+    background: url(../img/videobackground.jpg) no-repeat center center/cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h3 {
+      margin-top: 3rem;
+      padding: 1rem 2rem;
+      display: inline-block;
+      background: #ffffff94;
+      border-radius: 10px;
+      letter-spacing: 0.1rem;
+      width: 70%;
+    }
   }
 
   .video-wrapper {
@@ -190,6 +209,7 @@ header {
       color: $pink-color;
       font-size: 2rem;
       font-weight: normal;
+      margin: 1rem 0;
     }
   }
 }
@@ -293,172 +313,5 @@ header {
   .question-wrapper {
     margin: 2rem 0;
     padding: 1rem 1rem;
-  }
-}
-
-// Media Queries
-@media (max-width: 850px) {
-  .buffer {
-    height: 100px;
-  }
-  header {
-    .logo {
-      // z-index: 1;
-      transition: all 0.5s ease;
-    }
-    .hamburger {
-      display: block;
-      font-size: 1.7rem;
-      color: $pink-color;
-      cursor: pointer;
-      // z-index: 1;
-
-      .fa-times {
-        display: none;
-      }
-    }
-
-    .nav {
-      // position: fixed;
-      // top: 0;
-      // right: 0;
-      // width: 100%;
-      // height: 90%;
-      // z-index: 0;
-      // position: relative;
-
-      ul {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 90%;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        text-align: center;
-        z-index: -1;
-        transform: translateX(100%);
-
-        li {
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          // position: relative;
-          // top: 0;
-          // right: -1000px;
-          transform: translateX(100%);
-          transition: all 0.4s ease;
-          border: $pink-color solid 1px;
-          // display: none;
-          padding: 0;
-
-          &:nth-child(4) {
-            background: $yellow-color;
-            transition-delay: 0.4s;
-            border-bottom-width: 2px;
-          }
-          &:nth-child(3) {
-            background: $purple-color;
-            transition-delay: 0.3s;
-          }
-          &:nth-child(2) {
-            background: $light-green;
-            transition-delay: 0.2s;
-          }
-          &:nth-child(1) {
-            background: $pastel-blue;
-            transition-delay: 0.1s;
-          }
-        }
-      }
-    }
-
-    &.open .nav ul {
-      transform: translateX(0);
-    }
-    &.open .nav ul li {
-      transform: translateX(0);
-      // right: 0;
-    }
-
-    &.open .logo {
-      opacity: 0;
-    }
-  }
-
-  .showcase {
-    width: 90%;
-  }
-}
-
-@media (max-width: 600px) {
-  header {
-    .logo {
-      font-size: 1.8rem;
-    }
-  }
-
-  .showcase {
-    .showcase-inner {
-      flex-direction: column;
-      justify-content: space-between;
-
-      &-text {
-        text-align: center;
-        flex: 0 1 auto;
-        padding-top: 2rem;
-
-        .italic {
-          text-align: center;
-        }
-      }
-
-      &-image {
-        flex: 0 1 auto;
-      }
-    }
-  }
-
-  .test-content {
-    .box {
-      display: block;
-      padding: 0 1rem;
-    }
-
-    .test-title {
-      h1 {
-        font-size: 2.2rem;
-      }
-      h2 {
-        font-size: 1.2rem;
-      }
-    }
-  }
-
-  iframe {
-    width: 400px;
-    height: 220px;
-  }
-
-  .box6 {
-    & > div {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-
-    img {
-      width: 50%;
-    }
-  }
-}
-
-@media (max-width: 500px) {
-  iframe {
-    width: 300px;
-    height: 185px;
   }
 }
