--- a/scss/style.scss
+++ b/scss/style.scss
@@ -61,6 +61,66 @@ img {
   transition: all 500ms ease;
 }
 /* END BACK TO TOP BUTTON */
+
+// Fixed Menu
+.menu {
+  position: fixed;
+  top: 30%;
+  left: 0;
+
+  .btn-toggler {
+    background: $purple-color;
+    display: inline-block;
+    -webkit-writing-mode: vertical-lr;
+    -ms-writing-mode: tb-lr;
+    writing-mode: vertical-lr;
+    font-size: 1.5rem;
+    padding: 0.5rem 0.3rem;
+    border-top-right-radius: 9px;
+    border-bottom-right-radius: 9px;
+    padding-left: 1.2rem;
+    transform: translateX(-12px);
+    transition: all 0.3s;
+    border: darken($purple-color, 6) 2px solid;
+    cursor: pointer;
+
+    &:hover {
+      transform: translateX(0);
+    }
+  }
+
+  .menu-list {
+    position: fixed;
+    width: 20vw;
+    height: 100vh;
+    top: 0;
+    left: -100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: url(../img/image-from-rawpixel-id-1016768-jpeg.jpg) no-repeat;
+    background-position-y: -20px;
+    background-position-x: -10px;
+    transition: all 0.3s;
+    z-index: -1;
+
+    &-item {
+      margin: 1rem 0 0 0;
+      text-align: center;
+    }
+  }
+  &.show {
+    .btn-toggler {
+      transform: translateX(19vw);
+    }
+
+    .menu-list {
+      left: 0;
+    }
+  }
+}
+
 // Header
 header {
   top: 0;
