--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -18,7 +18,7 @@
   }
   header {
     .logo {
-      transition: all 0.5s ease;
+      @include transition;
     }
     .hamburger {
       display: block;
@@ -34,29 +34,24 @@
 
     .nav {
       ul {
+        @include flexBox(column, space-evenly, center);
         position: fixed;
         top: 0;
         right: 0;
         width: 100%;
         height: 90%;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
         text-align: center;
         // z-index: -1;
         transform: translateX(100%);
 
         li {
+          @include flexBox;
           width: 100%;
           height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
           transform: translateX(100%);
-          transition: all 0.4s ease;
           border: $pink-color solid 1px;
-          // display: none;
           padding: 0;
+          @include transition(0.4s);
 
           &:nth-child(4) {
             background: $yellow-color;
@@ -175,9 +170,7 @@
 
   .box6 {
     & > div {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      @include flexBox(column, center, center);
     }
 
     img {
