--- a/scss/style.scss
+++ b/scss/style.scss
@@ -370,4 +370,35 @@ header {
   }
 }
 
+// Objectives Page
+#objects {
+  header {
+    position: static;
+  }
+}
+.tableizer-table {
+  margin-top: 5rem;
+  border-collapse: collapse;
+
+  td {
+    padding: 5px;
+    border: 1px solid #ddd;
+  }
+
+  .main-title {
+    background: $yellow-color;
+  }
+
+  .fixed-row {
+    th {
+      border: 1px solid #ddd;
+      text-align: left;
+      padding: 5px;
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+    }
+  }
+}
 @import "mobile";
