add border radius to iframe

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -223,6 +223,10 @@ header {
       font-weight: normal;
       margin: 1rem 0;
     }
+
+    iframe {
+      border-radius: 1.5rem;
+    }
   }
 }
 
